# life

./: .gitignore  LICENSE  README.md  life.cabal  life.hs
src/: Life.hs  Main.hs
